--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -3,14 +3,23 @@ img {
   margin: 0 15px 0 15px;
 }
 
-li {
+ul {
   list-style: none;
   display: flex;
-  flex-direction: column;
-  gap: 0.2rem;
+  flex-direction: row;
+  gap: 4rem;
+  justify-content: space-around;
 }
 
-.cardbody {
+.section {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 0.3rem;
 }
